fix: individual order additemtoorder. #63
